<resources>
    <string name="app_name">Moms Assistant</string>
    <string name="fell_asleep">Fell asleep:</string>
    <string name="woke_up">Woke up:</string>
    <string name="slept">Slept</string>
    <string name="children_account">Children account</string>
    <string name="assistant">Assistant</string>

    <string name="start_sleep">Start a dream</string>
    <string name="end_sleep">End the dream</string>

    <string name="sleep_monitoring">Sleep monitoring</string>
    <string name="sleep_statistic">Sleep statistics</string>

    <string name="image_transition_name">image_transition_name</string>
    <string name="text_transition_name">text_transition_name</string>

    <string name="edit_assistant">Input:</string>
    <string name="add_new_entry">Add a new entry</string>
    <string name="diary_element">The diary element</string>

    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="date">Date of birth</string>
    <string name="name">Name</string>
    <string name="button_save">Save</string>
    <string name="weeks_old">%s weeks old</string>
</resources>