<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.FragmentSleep">
    <ScrollView
        android:id="@+id/scrollViewContent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="420dp"
                    android:orientation="horizontal"
                    android:background="@drawable/background_for_third_layer">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/slept"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:background="?attr/colorTertiary"
                        style="@style/SpecialTextColor"/>
                    <TextView
                        android:id="@+id/textView_time_difference"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:textSize="35sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:backgroundTint="?attr/colorTertiary"
                        style="@style/SpecialTextColor"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_gravity="top"
                    android:orientation="horizontal"
                    android:background="@drawable/background_for_second_layer">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/woke_up"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:background="?attr/colorSecondary"
                        style="@style/SpecialTextColor"/>
                    <Button
                        android:id="@+id/woke_up_material_button"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:textSize="35sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:backgroundTint="?attr/colorSecondary"
                        style="@style/SpecialTextColor"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_gravity="top"
                    android:orientation="horizontal"
                    android:background="@drawable/background_for_first_layer">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/fell_asleep"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:background="?attr/colorPrimary"
                        style="@style/SpecialTextColor"/>
                    <Button
                        android:id="@+id/fell_asleep_material_button"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:textSize="35sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:backgroundTint="?attr/colorPrimary"
                        style="@style/SpecialTextColor"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
            <LinearLayout
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:id="@+id/llLeftButtons"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingVertical="5dp"
                    android:layout_weight="2">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fell_asleep_button"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="5dp"
                        android:text="Начать сон"
                        android:background="@drawable/rounded_style_right"
                        style="@style/SpecialTextColor"
                        android:gravity="center_vertical"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/woke_up_button"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="5dp"
                        android:text="Завершить сон"
                        android:background="@drawable/rounded_style_right"
                        style="@style/SpecialTextColor"
                        android:gravity="center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llRightButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="5dp"
                    android:layout_weight="1">
                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/statistics_button"
                        android:layout_gravity="end"
                        android:layout_width="110dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/statistics_icon"
                        android:background="@drawable/rounded_style_left" />
                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/settings_button"
                        android:layout_gravity="end"
                        android:layout_width="110dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/settings_icon"
                        android:background="@drawable/rounded_style_left" />
                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/add_dream_button"
                        android:layout_gravity="end"
                        android:layout_width="110dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/add_button"
                        android:background="@drawable/rounded_style_left" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textAlignment="center"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>